# ztraining2strigo

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE.md  README.md  build.sh  build_win.ps1  setup.cfg  setup.py  strigo.schema.json
.circleci/: config.yml
src/strigo/: client.py
src/strigo/api/: __init__.py  classes.py  presentations.py  resources.py
src/strigo/configs/: __init__.py  classes.py  presentations.py  resources.py
src/strigo/models/: __init__.py  classes.py  errors.py  presentations.py  resources.py
src/strigo/scripts/: __init__.py  github.py
src/strigo/scripts/configs/: __init__.py
src/ztraining2strigo/: __init__.py  __main__.py  notes_parser.py
