[metadata]
name = ztraining2strigo
version = attr: ztraining2strigo.VERSION
description = Create Strigo classe for Zenika training
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zenika/ztraining2strigo
author = Alexandre Garnier
author_email = zigarn@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    training
    strigo

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ztraining2strigo = ztraining2strigo:main

[egg_info]
egg_base = build/
